# imagegen

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md
.github/workflows/: build.yml
agents/: openai.yaml
docs/: tag-triggered-packaging-design.md
scripts/: package_skill.sh  verify_release_assets.sh
src/: cli.rs  config.rs  image_io.rs  lib.rs  main.rs
src/provider/: google.rs  mod.rs  openai.rs
tests/: cli_dry_run.rs  core_behaviors.rs  package_runtime.rs  release_assets.rs
