[package]
name = "imagegen"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.6", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["macros", "rt", "time"] }
url = "2.5"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
